--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -13,6 +13,7 @@ print_info() {
     info "Resolution" resolution
     info "DE" de
     info "WM" wm
+    prin "Theme" $LEFTWM_THEME
     #info "WM Theme" wm_theme
     #info "Theme" theme
     #info "Icons" icons
