--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -18,7 +18,7 @@ print_info() {
     #info "Theme" theme
     #info "Icons" icons
     info "Terminal" term
-    prin "Font" $FONT
+    prin "Terminal Font" $FONT
     info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
