--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -2,6 +2,9 @@
 name = "toml"
 formatter = { command = "taplo", args = ["fmt", "-"] }
 [[language]]
+name = "rust"
+auto-format = false
+[[language]]
 name = "nu"
 file-types = ["nu"]
 comment-token = '#'
