--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -19,7 +19,7 @@ print_info() {
     #info "Icons" icons
     info "Terminal" term
     prin "Terminal Font" $FONT
-    info "Terminal Font" term_font
+    #info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
     #info "Memory" memory
