moved helix config out of theme folder

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,1 +1,10 @@
-/home/huginn/.config/leftwm/themes/metroid/helix/config.toml
+theme = "metroid"
+
+[editor]
+shell = ["nu", "-c"]
+line-number = "relative"
+[editor.statusline]
+right = ["diagnostics", "selections", "register", "position", "position-percentage", "total-line-numbers", "file-encoding"]
+
+[keys.insert]
+j = {k = "normal_mode"}
