--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,6 +1,8 @@
 [language-server.rust-analyzer.config]
 cargo.buildScripts.enable = true
 procMacro.enable = true
+check.command = "clippy"
+completion.callable.snippets = "add_parantheses"
 
 [[language]]
 name = "toml"
