--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -133,7 +133,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = [ "80:class_g = 'wezterm'" ];
+#opacity-rule = [ "90:class_g = 'org.wezfurlong.wezterm'" ];
 
 
 #################################
@@ -305,7 +305,7 @@ glx-no-stencil = true;
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = false
 
 # Disable the use of damage information.
 # This cause the whole screen to be redrawn every time, instead of the part of the screen
