helix: removed smart tab
unintuitive behaviour - was pissing me off

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -4,6 +4,8 @@ theme = "leftwm"
 shell = ["nu", "-c"]
 line-number = "relative"
 gutters = ["line-numbers", "spacer", "diff"]
+[editor.smart-tab]
+enable = false
 [editor.statusline]
 right = ["diagnostics", "selections", "register", "position", "position-percentage", "total-line-numbers", "file-encoding"]
 [editor.lsp]
