mpv vulkan, subfont, volume

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,8 @@
-gpu-api=opengl
-#sub-font=3270 Nerd Font Cond
+gpu-api=vulkan
+hwdec=auto
+sub-font="Futura PT Web Book"
 volume-max=200
+volume=70
 profile=gpu-hq
 vo=gpu-next
 target-colorspace-hint=yes
